--- a/src/app/components/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/components/heroes/hero-detail/hero-detail.component.html
@@ -12,7 +12,7 @@
     <ng-template #errorMessage>
       <div class="thumbnail">
         <img
-          src="https://hulksmash.world/wp-content/uploads/2017/06/HulkSmashLettersGrad.png"
+          src="../../../../assets/images/HulkSmashLettersGrad.png"
           alt="error-image">
         <div class="caption">
           <h3>Hero Info</h3>
@@ -23,5 +23,4 @@
   </div>
   </div>
 </div>
-
 
