--- a/src/app/components/heroes/heroes-list/heroes-list.component.html
+++ b/src/app/components/heroes/heroes-list/heroes-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <h3>Heros List Component</h3>
+    <h3>Our Heros List</h3>
     <app-hero
       *ngFor="let hero of heroes"
       [hero]="hero"
