--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
       <h4>Visit the List of our Heroes</h4>
       <img
         src="http://www.elemprendedor.ec/wp-content/uploads/2016/03/lecciones_de_vida_de_superheroes-900x450.jpg"
-        alt="heroes-image" style="max-width: 400px; padding-top: 20px">
+        alt="heroes-image" style="max-width: 400px; padding-top: 20px; cursor: pointer" (click)="onLoadHeroesPage()">
     </div>
   </div>
 </div>
